test/classes/initializers/generics/phase1/accessThisBad.good
accessThisBad.chpl:4: In initializer:
accessThisBad.chpl:5: error: can't pass "this" as an actual to a function during phase 1 of initialization
